model neural network with keras 2

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -3215,35 +3215,27 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "model.save('model.h5')\n",
-    "\n",
-    "# calculate predictions\n",
-    "# predictions = model.predict(X)\n",
-    "# round predictions\n",
-    "# rounded = [round(x[0]) for x in predictions]\n",
-    "# print(rounded)"
+    "model.save('model.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1], dtype=int64)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PREDICT] Actual Class = [5] , Predict Class = [5]\n"
+     ]
     }
    ],
    "source": [
+    "# prediction, menggunakan dataset manual, untuk testingnya ambbil salah satu data di dataset\n",
     "model = load_model('model.h5')\n",
-    "fitur = np.array([[-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313,-42.19950313]])\n",
-    "kelas = [1]\n",
+    "fitur = np.array([[-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-43.53663514,-40.68264958]])\n",
+    "kelas = [5]\n",
     "#classes = model.predict_classes(test)\n",
     "probas = model.predict(fitur)\n",
     "classes = probas.argmax(axis=-1)\n",
@@ -3251,7 +3243,7 @@
     "classes\n",
     "\n",
     "#print(label, alphabet.Alphabet.printAlphabet(classes[0]))\n",
-    "# print(\"[PREDICT] Actual Class =\", kelas, \", Predict Class =\",classes)"
+    "print(\"[PREDICT] Actual Class =\", kelas, \", Predict Class =\",classes)"
    ]
   },
   {
