masukin fungsi random ke kodingan bang randi

--- a/Extract_speech_to_model.ipynb
+++ b/Extract_speech_to_model.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rmaiz\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -22,13 +20,18 @@
     "from keras.models import Sequential\n",
     "from keras.models import load_model\n",
     "from keras.layers import Dense\n",
-    "from keras.utils import to_categorical"
+    "from keras.utils import to_categorical\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# untuk mendapatkan rata-rata di setiap (13 ciri)  \n",
@@ -42,8 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create mfcc data yang akan diuji\n",
@@ -59,34 +64,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PREDICT] Actual Class = [1] , Predict Class = [4]\n"
+      "[[[ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]\n",
+      "\n",
+      " [[ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]\n",
+      "\n",
+      " [[ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]\n",
+      "\n",
+      " ..., \n",
+      " [[ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]\n",
+      "\n",
+      " [[ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]\n",
+      "\n",
+      " [[ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  [ 0.2         0.17254902  0.16862746  0.        ]\n",
+      "  ..., \n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]\n",
+      "  [ 1.          1.          1.          0.        ]]]\n"
      ]
     }
    ],
    "source": [
     "# prediction, menggunakan dataset manual, untuk testingnya ambbil salah satu data di dataset\n",
+    "\n",
     "model = load_model('model.h5')\n",
     "fitur = np.array(data)\n",
-    "kelas = [1]\n",
+    "perpus = ['mm.png','ipb.png','jabar.png','perpus.png','smanbul.png']\n",
+    "index = random.choice([1, 2, 3,4,5]);\n",
+    "img=mpimg.imread('img/'+perpus[index-1])\n",
+    "kelas = [index]\n",
+    "print(img)\n",
+    "imgplot = plt.imshow(img)\n",
+    "#kelas = [1]\n",
     "#classes = model.predict_classes(test)\n",
-    "probas = model.predict(fitur)\n",
-    "classes = probas.argmax(axis=-1)\n",
+    "# probas = model.predict(fitur)\n",
+    "# classes = probas.argmax(axis=-1)\n",
     "\n",
     "#print(label, alphabet.Alphabet.printAlphabet(classes[0]))\n",
-    "print(\"[PREDICT] Actual Class =\", kelas, \", Predict Class =\",classes)"
+    "# print(\"[PREDICT] Actual Class =\", kelas, \", Predict Class =\",classes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -100,14 +161,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
